--- a/css/style.css
+++ b/css/style.css
@@ -283,11 +283,7 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 2.5rem;
     color: var(--secondary-color);
     font-weight: 400;
-}
-
-.service-icon .fa-solid.fa-stomach {
-    font-size: 2.2rem;
-    transform: scale(1.1);
+    display: block;
 }
 
 .service-card:hover .service-icon {
