Solution SVG : icônes personnalisées noir et blanc

--- a/css/style.css
+++ b/css/style.css
@@ -279,17 +279,11 @@ h1, h2, h3, h4, h5, h6 {
     overflow: hidden;
 }
 
-.service-icon i {
-    font-size: 2.5rem;
-    color: var(--secondary-color);
-    font-weight: 400;
+.service-icon svg {
+    width: 50px;
+    height: 50px;
     display: block;
-    font-family: "Font Awesome 6 Free", "Font Awesome 6 Pro", "FontAwesome";
-}
-
-.service-icon .fa-solid.fa-stomach {
-    font-size: 2.2rem;
-    transform: scale(1.1);
+    margin: 0 auto;
 }
 
 .service-card:hover .service-icon {
