--- a/css/style.css
+++ b/css/style.css
@@ -211,9 +211,10 @@ h1, h2, h3, h4, h5, h6 {
 
 /* ===== PROFILE SECTION ===== */
 .profile-image {
-    width: 250px;
-    height: 250px;
+    width: 300px;
+    height: 300px;
     object-fit: cover;
+    object-position: 60% 65%;
     border: 4px solid var(--secondary-color);
     transition: var(--transition);
 }
@@ -262,8 +263,8 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (max-width: 768px) {
     .profile-image {
-        width: 200px;
-        height: 200px;
+        width: 240px;
+        height: 240px;
     }
     
     .cv-item {
