--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,8 @@ h1, h2, h3, h4, h5, h6 {
     width: 300px;
     height: 300px;
     object-fit: cover;
-    object-position: 60% 65%;
+    object-position: 70% 80%;
+    transform: scale(0.85);
     border: 4px solid var(--secondary-color);
     transition: var(--transition);
 }
